--- a/styles.css
+++ b/styles.css
@@ -8,9 +8,14 @@ body {
     margin: 0;
 }
 
+body{
+    background-image: url('./bg.jpg');
+    background-position: center;
+}
+
 .container {
     text-align: center;
-    background-color: #fff;
+    background-color: #ffffffad;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
